--- a/src/content/post/astrowind-template-in-depth.mdx
+++ b/src/content/post/astrowind-template-in-depth.mdx
@@ -142,8 +142,8 @@ You'll note that the index file imports a lot of components, each one roughly an
 ```astro
 <CallToAction
   callToAction={{
-    text: 'Get template',
-    href: 'https://github.com/onwidget/astrowind',
+    text: 'Get Project',
+    href: 'https://github.com/iot-ecology/go-iot-platform',
     icon: 'tabler:download',
   }}
 >
